tests/integration/snapshots/integration__commands__format__ARRAY_WITH_NESTED_OBJECTS.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[
    {
        "level1": {
            "level2": {
                "level3": "value"
            }
        }
    },
    {
        "another": [
            {
                "deep": {
                    "key": 1
                }
            },
            {
                "deep": {
                    "key": 2
                }
            }
        ]
    }
]
stdout ---
[
  { "level1": { "level2": { "level3": "value" } } },
  { "another": [{ "deep": { "key": 1 } }, { "deep": { "key": 2 } }] }
]

stderr ---
