tests/integration/snapshots/integration__commands__format__DEEPLY_NESTED_OBJECT_WITH_ARR_VALUES.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
 
{
    "obj": { "obj": { "obj": { "obj": { "obj": { "obj": { "obj": { "obj": { "obj": { "obj": { "obj": { "obj": { "obj": { "obj": { "obj": { "obj": { "obj": { "obj": {
                    "slkdfjlsdfjsdsldkjflsfljdflksdjksdfljksdfjlkdflksjfdkl": ["hello"]
                } } } } } } } } } } } } } } } } } } }

stdout ---
{
  "obj": {
    "obj": {
      "obj": {
        "obj": {
          "obj": {
            "obj": {
              "obj": {
                "obj": {
                  "obj": {
                    "obj": {
                      "obj": {
                        "obj": {
                          "obj": {
                            "obj": {
                              "obj": {
                                "obj": {
                                  "obj": {
                                    "obj": {
                                      "slkdfjlsdfjsdsldkjflsfljdflksdjksdfljksdfjlkdflksjfdkl": [
                                        "hello"
                                      ]
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}

stderr ---
