tests/integration/snapshots/integration__commands__format__EXPONENT_LEADING_ZEROS.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
10e000010000
stdout ---
10e000010000

stderr ---
