tests/integration/snapshots/integration__commands__format__EXPONENT_UPPERCASE_E.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
429E6
stdout ---
429e6

stderr ---
