tests/integration/snapshots/integration__commands__format__EXPONENT_ZERO_PADDED.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
1e00
stdout ---
1

stderr ---
