tests/integration/snapshots/integration__commands__format__EXPONENT_ZERO_PADDED_PLUS.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
2e+00
stdout ---
2e+00

stderr ---
