tests/integration/snapshots/integration__commands__format__FLOAT_WITH_TRAILING_ZERO.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
1.0
stdout ---
1.0

stderr ---
